--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>♡ Letter for Love of My Life Aishwarya ♡</p>
+      <p>♡ Letter for Love of My Life Aishwarya ♡♡♡</p>
     </div>
 
     <!-- Letter Screen -->
