--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Yeeeeeee She Said Yesss</strong> Forever Together ♡♡♡♡
+          <strong>Yeeeeeeeee She Said Yesss</strong> Forever Together ♡♡♡♡
         </p>
       </div>
     </div>
